Add script to calculate DQI and visualize with bar plot using sample_data.csv

--- a/src/Module 8/Data Quality Scoring & Reporting/QUes_1.ipynb
+++ b/src/Module 8/Data Quality Scoring & Reporting/QUes_1.ipynb
@@ -11,20 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
-    "    df = pd.read_csv('sample_data.csv')\n",
-    "except FileNotFoundError:\n",
-    "    print(\"Error: The file 'sample_data.csv' was not found.\")\n",
+    "    df = pd.read_csv('sample_data.csv', encoding='utf-8')\n",
+    "except pd.errors.ParserError:\n",
+    "    print(\"Error: The CSV file is malformed.\")\n",
     "    exit()\n",
-    "except pd.errors.EmptyDataError:\n",
-    "    print(\"Error: The file is empty.\")\n",
-    "    exit()\n",
-    "except Exception as e:\n",
-    "    print(f\"An unexpected error occurred: {e}\")\n",
+    "except UnicodeDecodeError:\n",
+    "    print(\"Error: Unsupported character encoding in the CSV file.\")\n",
     "    exit()\n"
    ]
   },
@@ -39,37 +36,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import unittest\n",
+    "def test_empty_dataframe(self):\n",
+    "    empty_df = pd.DataFrame()\n",
+    "    self.assertEqual(empty_df.size, 0)\n",
     "\n",
-    "class TestDQICalculation(unittest.TestCase):\n",
-    "    def test_dqi_computation(self):\n",
-    "        test_data = pd.DataFrame({\n",
-    "            'name': ['A', None],\n",
-    "            'age': [25, 30]\n",
-    "        })\n",
-    "        total_cells = test_data.size\n",
-    "        total_missing = test_data.isnull().sum().sum()\n",
-    "        dqi = round((1 - (total_missing / total_cells)) * 100, 2)\n",
-    "        self.assertEqual(dqi, 75.0)\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    unittest.main(argv=[''], exit=False)\n"
+    "def test_all_missing(self):\n",
+    "    df = pd.DataFrame({\n",
+    "        'a': [None, None],\n",
+    "        'b': [None, None]\n",
+    "    })\n",
+    "    total_cells = df.size\n",
+    "    total_missing = df.isnull().sum().sum()\n",
+    "    dqi = round((1 - (total_missing / total_cells)) * 100, 2)\n",
+    "    self.assertEqual(dqi, 0.0)\n"
    ]
   }
  ],
