Add Streamlit Data Quality Dashboard with Unit Tests

--- a/src/Module 8/Data Quality Scoring & Reporting/Ques_2.ipynb
+++ b/src/Module 8/Data Quality Scoring & Reporting/Ques_2.ipynb
@@ -16,62 +16,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-10 21:05:37.779 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-05-10 21:05:37.781 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-05-10 21:05:37.782 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-05-10 21:05:37.783 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-05-10 21:05:37.783 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-05-10 21:05:37.784 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-05-10 21:05:37.787 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-05-10 21:05:37.789 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-05-10 21:05:37.790 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-      "2025-05-10 21:05:37.791 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
+      "2025-05-10 21:09:32.430 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-05-10 21:09:32.431 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-05-10 21:09:32.433 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-05-10 21:09:32.434 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-05-10 21:09:32.434 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-05-10 21:09:32.435 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-05-10 21:09:32.435 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-05-10 21:09:32.436 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-05-10 21:09:32.438 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+      "2025-05-10 21:09:32.439 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
      ]
     }
    ],
    "source": [
-    "# Write your code from here\n",
     "# dashboard.py\n",
     "\n",
     "import streamlit as st\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "# Set Streamlit page configuration\n",
     "st.set_page_config(page_title=\"Data Quality Dashboard\", layout=\"centered\")\n",
     "\n",
+    "# Dashboard Title\n",
     "st.title(\"📊 Data Quality Dashboard\")\n",
     "\n",
     "# Upload CSV\n",
     "uploaded_file = st.file_uploader(\"Upload your CSV file\", type=[\"csv\"])\n",
     "\n",
+    "# When a file is uploaded, process and display data\n",
     "if uploaded_file is not None:\n",
     "    try:\n",
+    "        # Read the CSV file\n",
     "        df = pd.read_csv(uploaded_file)\n",
-    "\n",
     "        st.success(\"✅ File successfully loaded!\")\n",
     "\n",
+    "        # Display preview of the dataset\n",
     "        st.subheader(\"🔍 Dataset Preview\")\n",
     "        st.dataframe(df.head())\n",
     "\n",
-    "        # Basic Metrics\n",
+    "        # Calculate Data Quality Index (DQI)\n",
     "        total_cells = df.size\n",
     "        total_missing = df.isnull().sum().sum()\n",
     "        dqi = round((1 - total_missing / total_cells) * 100, 2)\n",
     "\n",
+    "        # Show Data Quality Metrics\n",
     "        st.subheader(\"📈 Data Quality Metrics\")\n",
     "        st.metric(label=\"Total Rows\", value=df.shape[0])\n",
     "        st.metric(label=\"Total Columns\", value=df.shape[1])\n",
     "        st.metric(label=\"Total Missing Values\", value=total_missing)\n",
     "        st.metric(label=\"Data Quality Index (DQI)\", value=f\"{dqi} %\")\n",
     "\n",
-    "        # Bar Plot for DQI\n",
+    "        # Display a bar plot for DQI and Errors\n",
     "        st.subheader(\"📊 DQI vs Errors (%)\")\n",
     "        fig, ax = plt.subplots()\n",
     "        ax.bar([\"DQI\", \"Errors\"], [dqi, 100 - dqi], color=[\"green\", \"red\"])\n",
@@ -81,19 +85,86 @@
     "            ax.text(i, val + 2, f\"{val:.2f}%\", ha='center')\n",
     "        st.pyplot(fig)\n",
     "\n",
-    "        # Column-wise missing values\n",
+    "        # Display missing values per column\n",
     "        st.subheader(\"🧮 Missing Values per Column\")\n",
     "        missing_per_column = df.isnull().sum()\n",
     "        st.bar_chart(missing_per_column)\n",
     "\n",
     "    except pd.errors.ParserError:\n",
-    "        st.error(\"❌ The file appears to be malformed.\")\n",
+    "        st.error(\"❌ The file appears to be malformed. Please check the CSV format.\")\n",
     "    except UnicodeDecodeError:\n",
-    "        st.error(\"❌ Unsupported character encoding.\")\n",
+    "        st.error(\"❌ The file contains unsupported characters. Try another encoding.\")\n",
+    "    except ValueError:\n",
+    "        st.error(\"❌ Unexpected value found in the file. Ensure proper format.\")\n",
     "    except Exception as e:\n",
-    "        st.error(f\"❌ Unexpected error: {e}\")\n",
+    "        st.error(f\"❌ An unexpected error occurred: {e}\")\n",
     "else:\n",
     "    st.info(\"📁 Please upload a CSV file to begin.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'dashboard'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mio\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mdashboard\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m  \u001b[38;5;66;03m# Import the Streamlit app or functions directly\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mTestDQIDashboard\u001b[39;00m(unittest\u001b[38;5;241m.\u001b[39mTestCase):\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mtest_dqi_computation\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'dashboard'"
+     ]
+    }
+   ],
+   "source": [
+    "# test_dashboard.py\n",
+    "\n",
+    "import unittest\n",
+    "import pandas as pd\n",
+    "import io\n",
+    "from dashboard import *  # Import the Streamlit app or functions directly\n",
+    "\n",
+    "class TestDQIDashboard(unittest.TestCase):\n",
+    "\n",
+    "    def test_dqi_computation(self):\n",
+    "        \"\"\"Test if DQI is calculated correctly.\"\"\"\n",
+    "        # Simulate a small DataFrame with missing values\n",
+    "        df = pd.DataFrame({\n",
+    "            'name': ['Alice', None],\n",
+    "            'age': [25, 30]\n",
+    "        })\n",
+    "        total_cells = df.size\n",
+    "        total_missing = df.isnull().sum().sum()\n",
+    "        dqi = round((1 - (total_missing / total_cells)) * 100, 2)\n",
+    "        self.assertEqual(dqi, 75.0)\n",
+    "\n",
+    "    def test_empty_file(self):\n",
+    "        \"\"\"Test if the script handles empty CSV files.\"\"\"\n",
+    "        # Simulate an empty file upload\n",
+    "        df = pd.DataFrame()\n",
+    "        self.assertEqual(df.shape[0], 0)\n",
+    "\n",
+    "    def test_missing_values(self):\n",
+    "        \"\"\"Test if missing values are counted correctly.\"\"\"\n",
+    "        df = pd.DataFrame({\n",
+    "            'col1': [1, 2, None],\n",
+    "            'col2': [None, 2, 3]\n",
+    "        })\n",
+    "        missing_values = df.isnull().sum()\n",
+    "        self.assertEqual(missing_values['col1'], 1)\n",
+    "        self.assertEqual(missing_values['col2'], 1)\n",
+    "\n",
+    "    def test_invalid_csv(self):\n",
+    "        \"\"\"Test the script's error handling for invalid CSV.\"\"\"\n",
+    "        invalid_csv = io.StringIO(\"col1,col2\\n1,2\\n3,4\")\n",
+    "        with self.assertRaises(pd.errors.ParserError):\n",
+    "            df = pd.read_csv(invalid_csv)  # Simulate malformed CSV\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    unittest.main(argv=[''], exit=False)\n"
    ]
   }
  ],
